@@ -8,6 +8,7 @@ Changes in version 3.1 GA (2011-12-12)
 
 * fixed QuartzJobBean to work with Quartz 2.0/2.1 as well
 * added String constants to MediaType
+* renamed attribute @CacheEvict#afterInvocation to beforeInvocation (for better readability)
 
 
 Changes in version 3.1 RC2 (2011-11-28)
